@@ -2,6 +2,7 @@ Revision history for lua-MessagePack
 
 0.4.0
 	refactor without types_map indirection
+	remove set_number'integer'
 
 0.3.7  Sun Dec  4 17:30:00 2016
 	better use of string.pack (Lua 5.3)
